change pinned movies to be two per row on mobile, fix white blur edges on background image

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -5,7 +5,6 @@
 
 .layout {
   height: 100vh;
-  max-height: 100vh;
   display: flex;
   flex-direction: column;
   max-width: $site_max_width;
@@ -16,17 +15,15 @@
 }
 
 .layout-background {
-  width: 110vw;
-  min-height: 110vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   z-index: $zindex_background;
-  filter: blur(4px);
-  transform: translate(-5vw, -5vh);
 }
 
 .layout-background::after {
@@ -34,6 +31,8 @@
   background-color: $color_brand_primary;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   position: fixed;
   mix-blend-mode: multiply;
 }
