--- a/src/components/Poster/style.module.scss
+++ b/src/components/Poster/style.module.scss
@@ -16,6 +16,5 @@
 }
 
 .small {
-  height: 320px;
-  width: 220px;
+  height: 200px;
 }
